# derma-cot

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: skincap_labels.xlsx
derma_cot/api/: main.py
derma_cot/ui/: app.py  app_new.py
derma_cot/utils/: scin_dataset.py  skincap_dataset.py
notebooks/: dataset_analysis.ipynb  eda.ipynb  sft_dataset_prep.ipynb
notes/: README.md  model_responses.md  prompts.md  scratchpad.md
